# oww-rust-core

./: .gitignore  Cargo.toml  README.md  config.yaml  on_utterance.sh
models/: Home_assistant.onnx  apartment.onnx  bed_room.onnx  daytime.onnx  die_no_core.onnx  freeze_all_motor_function.onnx  front_room.onnx  living_room.onnx  lume_moss.onnx  maxima.onnx  nighttime.onnx  pre_set.onnx  re_boot.onnx  shut_down.onnx  turn_off.onnx  turn_on.onnx
src/: delay.rs  embedder.rs  lib.rs  main.rs  matcher.rs  oww.rs  rechunker.rs  runner.rs  sampler.rs  specter.rs  tee.rs  vad.rs
